--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ background-size: contain
 
 .huge[
 .center[
-Expanding life and Reducing distances.... 
+Curating people and Reducing distances.... 
 ]]
 
 .purple[
@@ -150,18 +150,6 @@ background-size: cover
 &lt;img src="img/understanding1.png" width="95%" style="display: block; margin: auto;" /&gt;
 
 ---
-class: 
-background-image: url(img/change1.jpg)
-background-size: cover
-
-.purple[
-.larger[
-English Teacher: 1996-2000
-]]
-
-&lt;img src="img/teachinghub3a.jpg" width="90%" style="display: block; margin: auto;" /&gt;
-
----
 background-image: url(img/thisisengineering-raeng-lSgfUoyyDwI-unsplash.jpg)
 background-size: cover
 
@@ -212,24 +200,43 @@ Military Institute of Engineering - M.Sc. Transportation Engineering
 Supervisor: Prof. Marcus Vinícius Quintela Cury
 ]
 
-
-&lt;br&gt;&lt;/br&gt;
-&lt;br&gt;&lt;/br&gt;
-&lt;br&gt;&lt;/br&gt;
-&lt;br&gt;&lt;/br&gt;
-
 .center[
 .larger[
 2002-2004
 ]]
 
 ---
+background-image: url(img/change1].jpg)
+background-size: cover
 
+# Postgraduate diploma in Railway Engineering
+
+
+.large[
+Vale - PgDip. Transportation Engineering
+]
+
+Analysis of the Increased Reliability of the Locomotives of the Grain Route after the Implementation of FCA's New Traction Frame
+
+.center[
+.larger[
+2003-2004
+]]
 
 
 ---
 background-image: url(img/change1].jpg)
 background-size: cover
+
+# Teaching experience
+
+.purple[
+.larger[
+English Teacher: 1996-2000
+]]
+
+&lt;img src="img/teachinghub3a.jpg" width="90%" style="display: block; margin: auto;" /&gt;
+
 
 New Horizons College    
 
@@ -237,15 +244,19 @@ Community Foundation for Higher Education of Itabira
 
 Department of Transportation Engineering and Geotechnics - UFMG
 
+Cefetmg
+
 ---
 
 background-image: url(img/change1].jpg)
 background-size: cover
 
+# Professional experience in the industry
+
 .pull-left[
 .large[
 .bold[
-Tectran - Ramón Vitor César   
+Systra - Tectran
 ]]]
 
 --
@@ -260,6 +271,7 @@ Vale - Engenharia Ferroviária
 ]
 
 ---
+
 background-image: url(img/change1].jpg)
 background-size: cover
 
@@ -268,23 +280,9 @@ background-size: cover
 ]
 
 .pull-right-narrow[
-.bold[
-
-Estudos operacionais
-]
-
-
-.bold[
-
-VPL
-
-PPC
-
-Especialização em Engenharia Ferroviária
-]
-
-Análise do Aumento de Confiabilidade das Locomotivas da Rota do Grão a Partir da Implantação do Novo Quadro de Tração da FCA
-
+- Estudos operacionais
+- VPL
+- PPC
 ]
 
 
@@ -294,30 +292,24 @@ background-size: cover
 
 .center[
 .larger[
-2006 - 2009
+2006 - 2019
 ]]
 
-
-.bold[
-Technical courses in Transportation and Traffic
-]
-
---
-
-.bold[
-Coordenação de laboratórios
-]
-
---
-
-.bold[
-Coordenação de cursos
-]
-
---
 **Transportation Engineering Department**
+
+Technical courses in Transportation and Traffic
+
+
+Coordenação de laboratórios
+
+
+Coordenação de cursos
+
+
 Sub-coordination and coordination of Transportation Engineering undergraduate course   
+
 Introduction to Transportation Engineering ❤️   
+
 Scientific Initiation and Junior Scientific Initiation students
 
 .pull-right[
@@ -362,6 +354,7 @@ class: middle
 &lt;img src="img/nos2.jpg" width="70%" style="display: block; margin: auto;" /&gt;
 ]
 
+❤️❤️
 .pull-right[
 &lt;img src="img/nos3.jpg" width="70%" style="display: block; margin: auto;" /&gt;
 ]
@@ -377,7 +370,7 @@ class: middle
 .pull-left[
 &lt;img src="img/sofia1.png" width="70%" style="display: block; margin: auto;" /&gt;
 ]
-
+❤️❤️
 .pull-right[
 &lt;img src="img/sofia2.png" width="50%" style="display: block; margin: auto;" /&gt;
 ]
@@ -392,7 +385,7 @@ class: middle
 .pull-left[
 &lt;img src="img/joao1.png" width="70%" style="display: block; margin: auto;" /&gt;
 ]
-
+❤️❤️
 .pull-right[
 &lt;img src="img/joao2.png" width="50%" style="display: block; margin: auto;" /&gt;
 ]
@@ -797,7 +790,7 @@ background-size: cover
 
 .bold[
 .large[
-“To TEACH, one needs Eros” Platão
+“To TEACH, one needs Eros” Plato
 
 To LEARN, one needs Eros. Renata
 
@@ -817,7 +810,7 @@ background-image: url(img/dist.jpg)
 background-size: cover
 
 .larger[
-Creating life and reducing distances....
+Curating people and reducing distances....
 ]
 ---
 
