--- a/index.html
+++ b/index.html
@@ -380,16 +380,14 @@ class: middle
 class: middle
 
 ❤️❤️
-
-
 .pull-left[
 &lt;img src="img/joao1.png" width="70%" style="display: block; margin: auto;" /&gt;
 ]
+
 ❤️❤️
 .pull-right[
 &lt;img src="img/joao2.png" width="50%" style="display: block; margin: auto;" /&gt;
 ]
-
 
 ---
 class: center, middle
@@ -415,26 +413,19 @@ background-size: container
 2011-2015
 ]
 
-
-.bold[
 .large[
 Geography - Spatial Information Treatment   
-]]
+]
 
 *Alexandre Magno Alves Diniz*
 
-.bold[
 .large[
 Período sanduíche no Institut Rhônalpin des Systèmes Complexes   
-]
 ]
 
 *Prof. Pablo Jensen*
 
-
-Spatial Analysis of the correlation among the location of grocery
-retailers, the average income of the population and prices policy: a case
-study for Belo Horizonte.
+Spatial Analysis of the correlation among the location of grocery retailers, the average income of the population and prices policy: a case study for Belo Horizonte.
 
 ---
 
