--- a/index.html
+++ b/index.html
@@ -456,7 +456,8 @@ Tutorial Education Program ❤️
 ]
 
 ---
-*Processos e sistemas decisórios em arranjos organizacionais*
+
+## Graduate Students
 
 - Sofia Eleutério - trabalho sobre o processo decisório quanto à implementação de faixas exclusivas de ônibus como política pública.
 - Felipe - caracterização da atividade e políticas públicas para vendedores ambulantes em BH   
@@ -480,12 +481,14 @@ Logistics City Chair, da Université Gustave Eiffel
 ## External Funding 
 
 .pull-left[
-RENOVATE - 
+.bigger[
+**RENOVATE - Freight transport webGIS tools for livable cities**
 
-]
+MSCA Postdoctoral Fellowship 2021
+]]
 
 .pull-right[
-&lt;img src="img/2022-05-06 22_30_58-Seal of Excellence.pdf - Foxit Reader.png" width="60%" style="display: block; margin: auto;" /&gt;
+&lt;img src="img/2022-05-06 22_30_58-Seal of Excellence.pdf - Foxit Reader.png" width="50%" style="display: block; margin: auto;" /&gt;
 ]
 
 ---
