--- a/index.html
+++ b/index.html
@@ -386,15 +386,16 @@ Finally reducing distances! Focusing on people, social justice and human scale c
 
 ## Doctor's degree in Geography - Spatial Analysis
 
-.bigger[
 .pull-left[
-
+.bigger[
 **Spatial Analysis of the correlation among the location of grocery retailers, the average income of the population and prices policy: a case study for Belo Horizonte**
+]
 
 *Supervisor: Alexandre Magno Alves Diniz*
 
-Período sanduíche no Institut Rhônalpin des Systèmes Complexes   
-]]
+PUCMinas   
+Institut Rhônalpin des Systèmes Complexes   
+]
 
 .pull-right[
 &lt;img src="img/defesa.jpg" width="95%" style="display: block; margin: auto;" /&gt;
@@ -422,6 +423,10 @@ PLACES - Planning for Access ❤️
 ]
 
 ---
+## Main research Projects
+
+Fazer o mapa mental dos projetos e como se relacionam
+
 .pull-left[
 **Revisora**   
 Transportes   
@@ -455,13 +460,6 @@ Tutorial Education Program ❤️
 &lt;img src="img/horta.jpg" width="100%" style="display: block; margin: auto;" /&gt;
 ]
 
----
-
-## Graduate Students
-
-- Sofia Eleutério - trabalho sobre o processo decisório quanto à implementação de faixas exclusivas de ônibus como política pública.
-- Felipe - caracterização da atividade e políticas públicas para vendedores ambulantes em BH   
-- Fernando - Redes sociais para analisar a relação entre filiação partidária e cargos comissionados no governo federal
 
 
 ---
@@ -476,6 +474,13 @@ Logistics City Chair, da Université Gustave Eiffel
 *Laetitia Dablanc*  
 ]
 
+
+---
+## Main publications
+
+
+
+
 ---
 
 ## External Funding 
@@ -488,8 +493,9 @@ MSCA Postdoctoral Fellowship 2021
 ]]
 
 .pull-right[
-&lt;img src="img/2022-05-06 22_30_58-Seal of Excellence.pdf - Foxit Reader.png" width="50%" style="display: block; margin: auto;" /&gt;
+&lt;img src="img/2022-05-06 22_30_58-Seal of Excellence.pdf - Foxit Reader.png" width="55%" style="display: block; margin: auto;" /&gt;
 ]
+
 
 ---
 class: center, bottom
@@ -507,20 +513,21 @@ Contribute to building better places to live, human scale cities and social just
 
 Communicating Science - OpenScience
 
+Develop a research identity, stimulate students para envolvimento em projetos com objetivo social e sustentável, life long learning (myself, my coworkers, my students and people from the community)
 
 ---
 
 class: center
-background-image: url(img/together.jpg)
+background-image: url(img/pexels-monstera-5874738.jpg)
 background-size: cover
 
 .bold[
 .large[
-“To TEACH, one needs Eros” Plato
+**“To TEACH, one needs Eros” Plato**
 
-To LEARN, one needs Eros. Renata
+**To LEARN, one needs Eros. Renata**
 
-To produce KNOWLEDGE, one needs Eros. Renata
+**To produce KNOWLEDGE, one needs Eros. Renata**
 ]]
 
 ---
@@ -529,9 +536,10 @@ class: bottom, center
 background-image: url(img/dist.jpg)
 background-size: cover
 
-.larger[
+.enormous[
+.center[
 Keep reducing distances at Chalmers
-]
+]]
 
 ---
 
@@ -566,7 +574,6 @@ THANK YOU!
 &lt;/p&gt;
 
 &amp;nbsp;
-
 
 
     </textarea>
