--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ background-size: contain
 
 
 .enormous[
-Enhancing and reducing distances.... 
+Incresing and reducing distances.... 
 ]
 
 
@@ -96,6 +96,10 @@ background-size: cover
 .enormous[
 Understanding the world...
 ]
+
+???
+
+The first 18 years of my life
 
 ---
 class: center, middle
@@ -179,6 +183,8 @@ Learning and teaching...
 
 The second part I proposed for this presentation concerns the more deductive part of my life. Less exploration, more acquisition of knowledge, and mostly I found myself entrapped in an unequal and hypothetical world.
 
+Another 15 years of my life
+
 ---
 class: center, middle
 
@@ -218,27 +224,22 @@ And in my final semester, I enrolled myself in transportation engineering course
 Transportation was the only field of knowledge in my course that allowed me to identify challenges directly related to people. 
 
 ---
-
 class: center
 
+&lt;img src="img/forma2.png" width="100%" style="display: block; margin: auto;" /&gt;
 
-&lt;img src="img/forma.png" width="100%" style="display: block; margin: auto;" /&gt;
 
 ???
 
 By the end of 2001 I got my Civil Engineering Bachelors' degree. But.... 
 
----
-class: center
-
-&lt;img src="img/forma1.png" width="100%" style="display: block; margin: auto;" /&gt;
 
 ---
 
 ## M.Sc. Transportation Engineering
 
 .pull-left[
-&lt;img src="img/1546-0-2811a8a40c0e73a73ed8018128658ca6.jpg" width="100%" style="display: block; margin: auto;" /&gt;
+&lt;img src="img/ime2.png" width="100%" style="display: block; margin: auto;" /&gt;
 ]
 
 .pull-right[
@@ -286,7 +287,8 @@ I had the opportunity to get a postgraduate diploma at Vale in Railway Engineeri
 
 ---
 
-## Teaching experience
+## Sparkling the joy of learning since 1996***
+.footnote[***OR TRYING REALLY HARD 👩‍🏫]
 
 .bigger[
 English Teacher
@@ -306,60 +308,62 @@ Along with my studies, I experimented teaching... English teacher, lecturer in d
 
 ---
 
-## CEFET-MG
-
-.bigger[.center[
-**Transportation Engineering Department/ Department of Social Sciences**
-]]
-
-.bigger[
-.pull-left[
-
-Sub-coordination and coordination of Transportation Engineering undergraduate course   
-
-Scientific Initiation and Junior Scientific Initiation students
-
-Research Ethics Committee
-]
-
-.pull-right[
-Thematic commitee for research projects assessment
-
-Examining Boards for different positions in Technological Education career
-
-Examining Boards of the simplified positions for temporary teachers
-
-]]
-
----
-
-## Teaching 
+## Teaching Philosophy
 
 .pull-left[
 .bigger[
 
-Reduce distance among faculty and students
+**Reduce distance** among faculty and students
 
-Students must be active parties in education
+Students must be **active parties** in education
 
-Fun - gamification and student protagonism
+**Fun** - gamification and student protagonism
+
+**Learn by making** and project/problem oriented learning
 ]]
 
 .pull-right[
 .bigger[
-Teaching and learning - teaching to learn - Long life learning
+Teaching and learning - teaching to learn - **Lifelong learning**
 
-Critical perspective
+**Critical** perspective and understanding the **social roles** students play in building and exploring the world
 
-Adaptation
+**Adaptation**
 
-Study, study, study, and study some more!
+**Study**, study, study, and study some more!
 ]]
 
 ---
 class: center, bottom
 background-image: url(img/games.png)
 background-size: cover
+
+---
+
+## CEFET-MG - other academic activities
+
+.bigger[.center[.purple[
+Transportation Engineering Department &lt;br&gt; Department of Applied Social Sciences
+]]]
+
+.bigger[
+.pull-left[
+
+**Academic coordinator** of **Transportation Engineering** undergraduate course   
+
+Undergraduate students from the institutional **scientific initiation program** and **IAESTE** program (internship)
+
+**Research Ethics** Committee
+]
+
+.pull-right[
+Thematic commitee for **research projects assessment**
+
+**Examining Boards** for different positions in Technological Education career
+
+**Examining Boards** of the simplified positions for temporary teachers
+
+]]
 
 
 ---
@@ -374,7 +378,7 @@ Producing and sharing knowlegde for a better world...
 
 ???
 
-
+The last ten years of my career
 Finally reducing distances! Focusing on people, social justice and human scale cities...
 
 
@@ -410,37 +414,17 @@ Institut Rhônalpin des Systèmes Complexes
 &lt;strike&gt;Translog City&lt;/strike&gt; 
 
 NIUMAR - Network on Intelligent Urban Mobility and Accessibility research ❤️   
+
 RedeTP@acesso ❤️
 
 NOSS - Center for Organizational Studies, Society and Subjectivity ❤️  
     
-PLACES - Planning for Access ❤️  
+**PLACES - Planning for Access** ❤️  
 
 ]]
 
 .pull-right[
 &lt;img src="img/niumar.jpg" width="100%" style="display: block; margin: auto;" /&gt;
-]
-
----
-## Main research Projects
-
-Fazer o mapa mental dos projetos e como se relacionam
-
-.pull-left[
-**Revisora**   
-Transportes   
-IEEE Access   
-Sustainable Cities and Society   
-Research in Transportation Economics   
-Transportation Research Record   
-Urban Rail Transit   
-]
-
-.pull-right[
-**Corpo editorial**   
-Caderno de geografia   
-Revista Brasileira de Transportes.   
 ]
 
 ---
@@ -459,8 +443,6 @@ Tutorial Education Program ❤️
 .pull-right[
 &lt;img src="img/horta.jpg" width="100%" style="display: block; margin: auto;" /&gt;
 ]
-
-
 
 ---
 
@@ -496,6 +478,11 @@ MSCA Postdoctoral Fellowship 2021
 &lt;img src="img/2022-05-06 22_30_58-Seal of Excellence.pdf - Foxit Reader.png" width="55%" style="display: block; margin: auto;" /&gt;
 ]
 
+---
+## Main research Projects
+
+Fazer o mapa mental dos projetos e como se relacionam
+
 
 ---
 class: center, bottom
@@ -514,6 +501,20 @@ Contribute to building better places to live, human scale cities and social just
 Communicating Science - OpenScience
 
 Develop a research identity, stimulate students para envolvimento em projetos com objetivo social e sustentável, life long learning (myself, my coworkers, my students and people from the community)
+
+Consolidate PLACES research group + Interaction among departments. 
+
+.big[
+Department | Collaboration
+-----------|--------------
+Architecture and Civil Engineering | Urban Design and Planning, Urban ans Regional Transformations, Cities and Complexity, Urban Functional and Morphological structures, Geocomputation 
+Technology Management and Economics | Operations and Supply Chain Management, Entrepreneuship and informal labour, inequality measures, urban accessibility as the aim of urban planning and public policy
+Computer Science and Engineering | Data Analytics, Geocomputation, Theoretical ML research for decision-making, natural language processing to support qualitative methods
+Communication and Learning in Science | Support on research communication to broader audiences, data curation and compliance with GDPR and Open Science efforts. 
+
+Space Earth and Environment (SEE) em Physical Resource Theory (Division)
+behaviour, energy, emmissions, travel demand, travel behaviour, modelling and simulation
+]
 
 ---
 
@@ -538,21 +539,28 @@ background-size: cover
 
 .enormous[
 .center[
-Keep reducing distances at Chalmers
+Keep reducing distances for a better world!
 ]]
 
 ---
 
 class: middle, inverse
 
+.pull-left[
+&lt;img src="img/reta_nova.jpeg" width="55%" style="display: block; margin: auto;" /&gt;
+]
 
+
+.pull-right[
 .larger[
 .center[
 THANK YOU!
 ]]
+]
+
+&lt;hr /&gt;
 
 &amp;nbsp;
-&lt;hr /&gt;
 
 &lt;p style="text-align: center;"&gt;&lt;span style="color: #ebdb00;"&gt;&lt;em&gt;renataoliveira@gmail.com&lt;/em&gt;&lt;/span&gt;&lt;/p&gt;
 
@@ -574,6 +582,9 @@ THANK YOU!
 &lt;/p&gt;
 
 &amp;nbsp;
+
+
+
 
 
     </textarea>
