--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ background-size: contain
 
 
 .enormous[
-Incresing and reducing distances.... 
+Increasing and reducing distances.... 
 ]
 
 
@@ -100,7 +100,9 @@ Understanding the world...
 ???
 
 The first 18 years of my life
+🢁
 
+🢃
 ---
 class: center, middle
 
@@ -109,11 +111,12 @@ class: center, middle
 ???
 
 The first stage of my life was an inductive exploration of the world! 
+➖
 
-
+✖️
 ---
 
-## That's 70s show
+## That's 70s show 🢁
 
 .pull-left[
 &lt;img src="img/pais.jpg" width="90%" style="display: block; margin: auto;" /&gt;
@@ -130,7 +133,7 @@ I was born in a traditional Brazilian family, back in 1979. Besides my parents, 
 ---
 
 
-## That's 70s show
+## That's 70s show 🢁
 
 &lt;img src="img/reta_baby_1.jpg" width="55%" style="display: block; margin: auto;" /&gt;
 
@@ -198,7 +201,7 @@ These were times to get a Bachelor's and Master's degree, a Postgraduation diplo
 ---
 
 
-## Civil Engineering and carreer choice
+## Civil Engineering and carreer choice 🢁
 
 .pull-left[
 .bigger[
@@ -236,7 +239,7 @@ By the end of 2001 I got my Civil Engineering Bachelors' degree. But....
 
 ---
 
-## M.Sc. Transportation Engineering
+## M.Sc. Transportation Engineering 🢁
 
 .pull-left[
 &lt;img src="img/ime2.png" width="100%" style="display: block; margin: auto;" /&gt;
@@ -256,7 +259,7 @@ I wasn't sure I was well instructed to work as an transportation engineer. So I 
 
 ---
 
-## Postgraduate diploma in Railway Engineering
+## Postgraduate diploma in Railway Engineering 🢁
 
 .pull-left[
 .bigger[
@@ -275,7 +278,7 @@ I had the opportunity to get a postgraduate diploma at Vale in Railway Engineeri
 
 ---
 
-## Professional experience in the industry
+## Professional experience in the industry 🢁
 
 .pull-left[
 &lt;img src="img/logo-vale-1024.png" width="80%" style="display: block; margin: auto;" /&gt;
@@ -287,15 +290,15 @@ I had the opportunity to get a postgraduate diploma at Vale in Railway Engineeri
 
 ---
 
-## Sparkling the joy of learning since 1996***
-.footnote[***OR TRYING REALLY HARD 👩‍🏫]
+## Sparkling the joy of learning since 1996*** 🢃
+.footnote[*** OR TRYING REALLY HARD 👩‍🏫]
 
 .bigger[
 English Teacher
 
 Novos Horizontes College    
 
-Community Foundation for Higher Education of Itabira
+Community Foundation for Higher Education of Itabira - FUNCESI
 
 Department of Transportation Engineering and Geotechnics - UFMG
 
@@ -308,7 +311,7 @@ Along with my studies, I experimented teaching... English teacher, lecturer in d
 
 ---
 
-## Teaching Philosophy
+## Teaching Philosophy (under construction 🚧) 🢃
 
 .pull-left[
 .bigger[
@@ -340,20 +343,19 @@ background-size: cover
 
 ---
 
-## CEFET-MG - other academic activities
+## CEFET-MG - other academic activities 🢃
 
-.bigger[.center[.purple[
+.bigger[.center[.purple[.bold[
 Transportation Engineering Department &lt;br&gt; Department of Applied Social Sciences
-]]]
+]]]]
 
 .bigger[
 .pull-left[
-
 **Academic coordinator** of **Transportation Engineering** undergraduate course   
 
-Undergraduate students from the institutional **scientific initiation program** and **IAESTE** program (internship)
+Undergraduate students from the institutional **scientific initiation program** and **IAESTE** program (internship)   
 
-**Research Ethics** Committee
+**Research Ethics** Committee   
 ]
 
 .pull-right[
@@ -373,7 +375,7 @@ background-image: url(img/pexels-pixabay-63643.jpg)
 background-size: cover
 
 .enormous[
-Producing and sharing knowlegde for a better world...
+Producing and sharing knowledge for a better world...
 ]
 
 ???
@@ -388,7 +390,7 @@ Finally reducing distances! Focusing on people, social justice and human scale c
 
 ---
 
-## Doctor's degree in Geography - Spatial Analysis
+## Doctor's degree in Geography - Spatial Analysis 🢃🢃
 
 .pull-left[
 .bigger[
@@ -407,29 +409,41 @@ Institut Rhônalpin des Systèmes Complexes
 
 ---
 
-## Research Groups and Networks
+## Research in collaboration 🢃🢃🢃🢃🢃
 
 .bigger[
 .pull-left[
-&lt;strike&gt;Translog City&lt;/strike&gt; 
 
-NIUMAR - Network on Intelligent Urban Mobility and Accessibility research ❤️   
+Network on Intelligent Urban Mobility and Accessibility research ❤️   
 
 RedeTP@acesso ❤️
 
-NOSS - Center for Organizational Studies, Society and Subjectivity ❤️  
+Center for Organizational Studies, Society and Subjectivity ❤️  
     
 **PLACES - Planning for Access** ❤️  
+
+IST - Lisbon University
 
 ]]
 
 .pull-right[
-&lt;img src="img/niumar.jpg" width="100%" style="display: block; margin: auto;" /&gt;
-]
+.bigger[
+Aston University
+
+Federal University of Minas Gerais   
+
+Federal University of Tocantins   
+
+Federal University of São Carlos
+
+Federal University of Ceará  
+
+Université Gustave Eiffel
+]]
 
 ---
 
-## Community involvement
+## Community involvement 🢃🢃🢃🢃🢃
 
 .pull-left[
 .bigger[
@@ -438,15 +452,16 @@ Horta da Cidade - social enterpreneurship ❤️
 Paraíso do Tocantins Mobility Plan ❤️  
 
 Tutorial Education Program ❤️
-]]
 
+Technical advisory council for metropolitan planning ❤️
+]]
 .pull-right[
 &lt;img src="img/horta.jpg" width="100%" style="display: block; margin: auto;" /&gt;
 ]
 
 ---
 
-## Postdoctoral Fellowship
+## Postdoctoral Fellowship 🢃🢃
 
 .bigger[
 **Relationships among urban characteristics, real estate market and spatial patterns of warehouses in different geographic contexts**
@@ -458,14 +473,29 @@ Logistics City Chair, da Université Gustave Eiffel
 
 
 ---
-## Main publications
+
+## Main publications 🢃🢃🢃
+
+.bigger[
+**Access to urban activities** during COVID-19 pandemic and impacts on urban mobility: the Brazilian Context - .purple[Transport Policy]
+
+The **geography of warehouses** in the SPMR and contribuiting factors to this spatial distribution - .purple[Journal of Transport Geography]
+
+A **sustainable** approach for urban farming based on city logistics concepts for **local production and consumption** of vegetables - .purple[Research in Transportation Economics]
+
+Analysis of the potential **demand** of **automated delivery stations** for e-commerce deliveries in Belo Horizonte, Brazil - .purple[Research in Transportation Economics]]
+
+
+---
+## Main international conferences 🢃🢃🢃🢃
+
 
 
 
 
 ---
 
-## External Funding 
+## External Funding 🢃🢃🢃
 
 .pull-left[
 .bigger[
@@ -479,9 +509,40 @@ MSCA Postdoctoral Fellowship 2021
 ]
 
 ---
-## Main research Projects
+
+## External Funding 🢃🢃🢃
+
+.pull-left[
+.bigger[
+**Individual research grant - productive researcher**   
+]
+National Council for Scientific and Technological Research
+Grant number: 314045/2021-0
+2022-2025
+
+.bigger[
+**Individual research grant - productive researcher**
+]
+National Council for Scientific and Technological Research
+Grant number: 312750/2018-8
+2019-2022
+]
+
+.pull-right[
+.bigger[
+**Universal research resources**
+]
+National Council for Scientific and Technological Research
+Grant number: 404754/2021-0
+]
+
+---
+## Main research Projects 🢃🢃🢃🢃
 
 Fazer o mapa mental dos projetos e como se relacionam
+
+Characterization of the Logistics Sprawl and respective impacts
+on metropolitan areas
 
 
 ---
@@ -494,7 +555,43 @@ background-size: cover
 Why Chalmers and where to go...
 ]
 
+
 ---
+## Why Chalmers? 🢃🢃🢃🢃🢃
+
+- Explore possibilities of inovative projects for knowledge production focused on promoting a more sustainable world
+- Research structure
+- Focus on gender equity
+-
+-
+- Support for engaging with companies, police-makers and society
+
+Among many other opportunities....
+
+
+---
+background-image: url(img/research_goals.png)
+background-size: cover
+
+---
+
+## Expected internal collaboration at Chalmers .center[🢃🢃🢃🢃🢃]
+
+Department | Collaboration
+-----------|--------------
+Architecture and Civil Engineering | Urban Design and Planning, Urban ans Regional Transformations, Cities and Complexity, Urban Functional and Morphological structures, Geocomputation 
+Technology Management and Economics | Operations and Supply Chain Management, Entrepreneuship and informal labour, inequality measures, urban accessibility as the aim of urban planning and public policy
+Computer Science and Engineering | Data Analytics, Geocomputation, Theoretical ML research for decision-making, natural language processing to support qualitative methods
+Communication and Learning in Science | Support on research communication to broader audiences, data curation and compliance with GDPR and Open Science efforts. 
+Space Earth and Environment (SEE) | Behaviour, energy, emissions, travel demand, travel behaviour, modelling and simulation.
+
+
+---
+## Research projects 🢃🢃🢃🢃🢃
+
+
+
+???
 
 Contribute to building better places to live, human scale cities and social justice - And this is what drives Chalmers
 
@@ -503,18 +600,6 @@ Communicating Science - OpenScience
 Develop a research identity, stimulate students para envolvimento em projetos com objetivo social e sustentável, life long learning (myself, my coworkers, my students and people from the community)
 
 Consolidate PLACES research group + Interaction among departments. 
-
-.big[
-Department | Collaboration
------------|--------------
-Architecture and Civil Engineering | Urban Design and Planning, Urban ans Regional Transformations, Cities and Complexity, Urban Functional and Morphological structures, Geocomputation 
-Technology Management and Economics | Operations and Supply Chain Management, Entrepreneuship and informal labour, inequality measures, urban accessibility as the aim of urban planning and public policy
-Computer Science and Engineering | Data Analytics, Geocomputation, Theoretical ML research for decision-making, natural language processing to support qualitative methods
-Communication and Learning in Science | Support on research communication to broader audiences, data curation and compliance with GDPR and Open Science efforts. 
-
-Space Earth and Environment (SEE) em Physical Resource Theory (Division)
-behaviour, energy, emmissions, travel demand, travel behaviour, modelling and simulation
-]
 
 ---
 
@@ -539,7 +624,7 @@ background-size: cover
 
 .enormous[
 .center[
-Keep reducing distances for a better world!
+Keep reducing distances for a better world! 🢃🢃🢃
 ]]
 
 ---
@@ -547,7 +632,7 @@ Keep reducing distances for a better world!
 class: middle, inverse
 
 .pull-left[
-&lt;img src="img/reta_nova.jpeg" width="55%" style="display: block; margin: auto;" /&gt;
+&lt;img src="img/reta_atual.jpeg" width="55%" style="display: block; margin: auto;" /&gt;
 ]
 
 
@@ -584,7 +669,19 @@ THANK YOU!
 &amp;nbsp;
 
 
+???
 
+Research presentation, 30 minutes on the theme: Please
+ introduce yourself and your research and teaching experience related to the 
+Area of Transport.
+
+The lecture should cover: 
+
+
+- Your previous and proposed research 
+
+
+- How your research complements the existing research areas in relevant
 
 
     </textarea>
