--- a/index.html
+++ b/index.html
@@ -393,7 +393,7 @@ Institut Rhônalpin des Systèmes Complexes
 ]
 
 .pull-right[
-&lt;img src="img/defesa.jpg" width="95%" style="display: block; margin: auto;" /&gt;
+&lt;img src="img/defesa.JPG" width="95%" style="display: block; margin: auto;" /&gt;
 ]
 
 ---
