--- a/index.html
+++ b/index.html
@@ -191,22 +191,16 @@ class: center, middle
 These were times to get a Bachelor's and Master's degree, a Postgraduation diploma, some professional experience and a lot of teaching experience! And a lot of LOVE! I kept expanding my ecumene and enhancing distances from the real tangible world (besides motherhood! what a well-grounded challenge!)
 
 ---
+class: center
 
+## Bachelor in Civil Engineering
 
-## Civil Engineering 🢁 🌎 
+&lt;img src="img/forma2.png" width="100%" style="display: block; margin: auto;" /&gt;
 
-.pull-left[
-.bigger[
-- Students council and institutional representation
-- Undergrauduate Program for Scientific Initiation: **Residential Mobility and Transportation System in the Metropolitan Region of Belo Horizonte** 
-- Final semester: **Transportation Engineering**
-]]
-
-.pull-right[
-&lt;img src="img/pexels-thirdman-5584052.jpg" width="80%" style="display: block; margin: auto;" /&gt;
-]
 
 ???
+
+By the end of 2001, I got my Civil Engineering Bachelors' degree. But.... 
 
 During my undergraduate studies, I explored possibilities that were a game changer in my professional journey. 
 
@@ -217,21 +211,9 @@ I joined an Undergrauduate Program for Scientific Initiation in the project enti
 And in my final semester, I enrolled myself in transportation engineering courses. 
 
 Transportation was the only field of knowledge in my course that allowed me to identify challenges directly related to people. 
-
----
-class: center
-
-&lt;img src="img/forma2.png" width="100%" style="display: block; margin: auto;" /&gt;
-
-
-???
-
-By the end of 2001, I got my Civil Engineering Bachelors' degree. But.... 
-
-
 ---
 
-## M.Sc. Transportation Engineering 🢁 🌎 🚷
+## M.Sc. Transportation Engineering
 
 .pull-left[
 &lt;img src="img/ime2.png" width="100%" style="display: block; margin: auto;" /&gt;
@@ -251,11 +233,10 @@ I wasn't sure I was well instructed to work as an transportation engineer. So I 
 
 ---
 
-## Pg. diploma in Railway Engineering 🢁 🌎 🚷
+## Pg. diploma in Railway Engineering
 
 .pull-left[
 .bigger[
-Vale - PgDip. Transportation Engineering
 
 **Analysis of the Increased Reliability of the Locomotives of the Grain Route after the Implementation of FCA's New Traction Scheme**
 ]]
@@ -270,7 +251,7 @@ I had the opportunity to get a postgraduate diploma at Vale in Railway Engineeri
 
 ---
 
-## Professional experience 🢁 🌎 🚷
+## Professional experience
 
 .pull-left[
 &lt;img src="img/logo-vale-1024.png" width="80%" style="display: block; margin: auto;" /&gt;
@@ -286,7 +267,7 @@ I had the opportunity to get a postgraduate diploma at Vale in Railway Engineeri
 background-image: url(img/fundo.png)
 background-size: cover
 
-## Sparkling the joy of learning since 1996*** .center[🢃 🚶 🚴 🔗]
+## Sparkling the joy of learning since 1996*** 
 .footnote[*** OR TRYING REALLY HARD 👩‍🏫]
 
 .bigger[
@@ -309,7 +290,7 @@ Along with my studies, I experimented teaching... English teacher, lecturer in d
 
 ---
 
-## CEFET-MG 🢃 🚶🚴🔗
+## CEFET-MG
 
 .bigger[.center[.purple[.bold[
 Transportation Engineering Department &lt;br&gt; Department of Applied Social Sciences
@@ -328,9 +309,6 @@ Transportation Engineering Department &lt;br&gt; Department of Applied Social Sc
 Thematic commitee for **research projects assessment**
 
 **Examining Boards** for different positions in Technological Education career
-
-**Examining Boards** of the simplified positions for temporary teachers
-
 ]]
 
 
@@ -363,7 +341,7 @@ Finally reducing distances! Focusing on people, social justice and human scale c
 
 ---
 
-## Doctor's degree in Geography - Spatial Analysis .center[🢃🚶🚴🔗]
+## Doctor's degree in Geography - Spatial Analysis
 
 .pull-left[
 .bigger[
@@ -382,41 +360,39 @@ Institut Rhônalpin des Systèmes Complexes
 
 ---
 
-## Research in collaboration 🢃🚶🚴🔗
+## Research in collaboration
 
 .bigger[
 .pull-left[
-
-Network on Intelligent Urban Mobility and Accessibility research ❤️   
-
-RedeTP@acesso ❤️
-
-Center for Organizational Studies, Society and Subjectivity ❤️  
-    
-**PLACES - Planning for Access** ❤️  
-
 IST - Lisbon University
 
-]]
-
-.pull-right[
-.bigger[
 Aston University
+
+Université Gustave Eiffel
 
 Federal University of Minas Gerais   
 
 Federal University of Tocantins   
 
 Federal University of São Carlos
+]]
 
+.pull-right[
+.bigger[
 Federal University of Ceará  
 
-Université Gustave Eiffel
+Network on Intelligent Urban Mobility and Accessibility research ❤️   
+
+RedeTP@acesso ❤️
+
+Center for Organizational Studies, Society and Subjectivity ❤️ 
+    
+**PLACES - Planning for Access** ❤️  
 ]]
 
 ---
 
-## Community involvement 🢃🚶🚴🔗
+## Community involvement
 
 .pull-left[
 .bigger[
@@ -428,13 +404,14 @@ Tutorial Education Program ❤️
 
 Technical advisory council for metropolitan planning ❤️
 ]]
+
 .pull-right[
 &lt;img src="img/horta.jpg" width="100%" style="display: block; margin: auto;" /&gt;
 ]
 
 ---
 
-## Postdoctoral Fellowship 🢃🚶🚴🔗
+## Postdoctoral Fellowship
 
 .bigger[
 **Relationships among urban characteristics, real estate market and spatial patterns of warehouses in different geographic contexts**
@@ -447,7 +424,7 @@ Logistics City Chair, da Université Gustave Eiffel
 
 ---
 
-## External Funding 🢃🚶🚴🔗
+## External Funding
 
 .pull-left[
 .bigger[
@@ -462,7 +439,7 @@ MSCA Postdoctoral Fellowship 2021
 
 ---
 
-## External Funding 🢃🚶🚴🔗
+## External Funding
 
 .pull-left[
 .bigger[
@@ -490,7 +467,7 @@ Grant number: 404754/2021-0
 
 ---
 
-## Main research efforts 🢃🚶🚴🔗
+## Main research efforts
 
 .bigger[
 .pull-left[
@@ -510,7 +487,7 @@ Grant number: 404754/2021-0
 
 ---
 
-## Teaching Philosophy (🚧) 🢃🚶🚴🔗
+## Teaching Philosophy (🚧)
 
 .pull-left[
 .bigger[
@@ -583,7 +560,7 @@ Why Chalmers and where to go...
 
 ---
 
-## Why Chalmers? 🢃 👩 🏫 🎓 🕵 🔗
+## Why Chalmers? 👩 🏫 🎓 🕵 🔗
 
 .bigger[
 - **Innovative projects** for **knowledge production** to contribute for a **more sustainable, happy and equitable world**
@@ -677,14 +654,9 @@ Space Earth and Environment (SEE) | Behaviour, energy, emissions, travel demand,
 ]
 
 --
-.bigger[
-- I am passionate about **learning** and want to develop **strong teaching and research skills**
-]
-
---
 
 .bigger[
-- I need to **work collaboratively** to have fun! Also, I have some experience in applying for **research funding** in the **Brazilian** and **European** contexts
+- I ❤ to **work collaboratively**! Also, I have some experience in applying for **research funding** in the **Brazilian** and **European** contexts
 ]
 
 --
@@ -721,7 +693,7 @@ Keep reducing distances and expanding interactions for a better world! &lt;br&gt
 class: middle, inverse
 
 .pull-left[
-&lt;img src="img/reta_atual.jpeg" width="55%" style="display: block; margin: auto;" /&gt;
+&lt;img src="img/reta_atual.jpeg" width="45%" style="display: block; margin: auto;" /&gt;
 ]
 
 
@@ -730,9 +702,6 @@ class: middle, inverse
 .center[
 THANK YOU!
 ]]
-]
-
-&lt;hr /&gt;
 
 &amp;nbsp;
 
@@ -756,6 +725,8 @@ THANK YOU!
 &lt;/p&gt;
 
 &amp;nbsp;
+
+]
 
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
