--- a/index.html
+++ b/index.html
@@ -738,7 +738,33 @@ THANK YOU!
 &amp;nbsp;
 
 ]
+---
 
+## LOVE!
+
+&lt;img src="img/nos3.jpg" width="70%" style="display: block; margin: auto;" /&gt;
+
+---
+
+## LOVE!
+.pull-left[
+&lt;img src="img/sofia1.png" width="70%" style="display: block; margin: auto;" /&gt;
+]
+
+.pull-right[
+&lt;img src="img/sofia2.png" width="50%" style="display: block; margin: auto;" /&gt;
+]
+---
+
+## LOVE!
+.pull-left[
+&lt;img src="img/joao1.png" width="80%" style="display: block; margin: auto;" /&gt;
+]
+
+.pull-right[
+
+&lt;img src="img/joao2.png" width="60%" style="display: block; margin: auto;" /&gt;
+]
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
 <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
